# libredesign.app

./: .gitignore  CLAUDE.md  LICENSE  README.md  ai_implementation_priorities.md  ai_implementation_spec.md  cad_integration.md  chat-box-tools-reference.tex  chatwindow_spec.aux  chatwindow_spec.out  chatwindow_spec.tex  chatwindow_spec.toc  design_verification.md  designlibre-product-spec.md  designlibre_logo.xcf  freema-product-spec.md  import-image-tool-debugging-report.tex  index.html  menu-template.md  package-lock.json  package.json  pain-points-spec.aux  pain-points-spec.out  pain-points-spec.tex  pain-points-spec.toc  png-to-preserve-toolchain.aux  png-to-preserve-toolchain.out  png-to-preserve-toolchain.tex  png-to-preserve-toolchain.toc  preserve-import-fix-plan.tex  presets-design-documentation.tex  presets-screen.preserve  todo_20260105.md  tsconfig.build.json  tsconfig.json  uno.config.ts  unocss_applications.md  vite.config.ts  vitest.config.ts
deploy/: DEPLOY-INSTRUCTIONS.md  README.md  generate-ssl-cert.sh  install.sh  nginx-designlibre-8080.conf  nginx-designlibre.conf  nginx-production.conf
design/: .~lock.2a_Now Playing Full Screen.rtf#  2a_Now Playing Full Screen.rtf
docs/: KEYBOARD_SHORTCUTS.md  advanced-json-parser-plan.md  ai-llm-integration-plan.md  ai-model-priming-guide.md  ai-module-errors-report.md  ai-priming-implementation-plan.md  ai-tools-complete-list.md  inspector-template.md  (+24 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
(+1772 files in other folders)
